--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ name = "pypi"
 "aniso8601" = "==0.82"
 "jinja2" = "==2.10"
 "psycopg2" = "==2.7.4"
-alembic = "==0.9.8"
+alembic = "==0.9.9"
 anyjson = "==0.3.3"
 awesome-slugify = "==1.6.5"
 babel = "==2.5.3"
@@ -55,12 +55,12 @@ prettyconf = "==1.2.3"
 python-dateutil = "==2.4.2"
 python-editor = "==1.0.3"
 python-magic = "==0.4.15"
-raven = "==6.5.0"
+raven = "==6.6.0"
 regex = "==2018.2.3"
 requests = "==2.6.0"
 six = "==1.11.0"
-sqlalchemy = "==1.2.5"
-sqlalchemy-utils = "==0.33.0"
+sqlalchemy = "==1.2.6"
+sqlalchemy-utils = "==0.33.2"
 tablib = "==0.12.1"
 unidecode = "==0.4.21"
 webassets = "==0.12.1"
@@ -70,8 +70,9 @@ wtforms = "==2.1"
 wtforms-alchemy = "==0.16.6"
 xlrd = "==1.1.0"
 xlwt = "==1.3.0"
-pyxform = "==0.10.0"
-shortuuid = "==0.5.0"
+pyxform = "==0.11.1"
+arpeggio = "==1.7.1"
+pytz = "==2018.4"
 
 
 [dev-packages]
@@ -81,7 +82,7 @@ shortuuid = "==0.5.0"
 flask-debugtoolbar = "==0.10.1"
 nose = "==1.3.7"
 flask-testing = "==0.7.1"
-pytest = "==3.4.2"
+pytest = "==3.5.0"
 coverage = "*"
 
 
