--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,9 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 "aniso8601" = "==0.82"
 "jinja2" = "==2.10"
 "psycopg2" = "==2.7.4"
@@ -73,10 +70,11 @@ xlwt = "==1.3.0"
 pyxform = "==0.11.1"
 arpeggio = "==1.7.1"
 pytz = "==2018.4"
-
+prometheus-client = "*"
+netifaces = "*"
+psutil = "*"
 
 [dev-packages]
-
 "autopep8" = "*"
 "flake8" = "*"
 flask-debugtoolbar = "==0.10.1"
@@ -85,7 +83,5 @@ flask-testing = "==0.7.1"
 pytest = "==3.5.0"
 coverage = "*"
 
-
 [requires]
-
 python_version = "3.6"
