--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ awesome-slugify = "==1.6.5"
 babel = "==2.5.3"
 blinker = "==1.4"
 cachetools = "==1.1.5"
-celery = {version = ">=4.0.0,<4.1.0", extras = ["redis"]}
+celery = "==4.1.1"
 flask = "==0.12.2"
 flask-admin = "==1.5.1"
 flask-assets = "==0.12"
@@ -49,7 +49,7 @@ parsimonious = "==0.8.0"
 parsley = "==1.3"
 passlib = "==1.7.1"
 prettyconf = "==1.2.3"
-python-dateutil = "==2.4.2"
+python-dateutil = "==2.7.2"
 python-editor = "==1.0.3"
 python-magic = "==0.4.15"
 raven = "==6.6.0"
@@ -73,6 +73,7 @@ pytz = "==2018.4"
 prometheus-client = "*"
 netifaces = "*"
 psutil = "*"
+redis = "==2.10.6"
 
 [dev-packages]
 "autopep8" = "*"
