--- a/Pipfile
+++ b/Pipfile
@@ -57,7 +57,7 @@ regex = "==2018.2.3"
 requests = "==2.6.0"
 six = "==1.11.0"
 sqlalchemy = "==1.2.6"
-sqlalchemy-utils = "==0.33.2"
+sqlalchemy-utils = "==0.33.10"
 tablib = "==0.12.1"
 unidecode = "==0.4.21"
 webassets = "==0.12.1"
@@ -74,6 +74,7 @@ prometheus-client = "*"
 netifaces = "*"
 psutil = "*"
 redis = "==2.10.6"
+"sqlalchemy-i18n" = "==1.0.3"
 
 [dev-packages]
 "autopep8" = "*"
