--- a/Pipfile
+++ b/Pipfile
@@ -34,7 +34,7 @@ flask-sslify = "==0.1.4"
 flask-testing = "==0.4.2"
 flask-uploads = "==0.2.1"
 flask-wtf = "==0.14.2"
-gevent = "==1.2.2"
+gevent = "==1.4.0"
 gunicorn = "==19.7.1"
 honcho = "==1.0.1"
 itsdangerous = "==0.24"
@@ -42,9 +42,9 @@ lxml = "==4.1.1"
 mako = "==1.0.7"
 markupsafe = "==1.0"
 networkx = "==2.1"
-numpy = "==1.14.0"
+numpy = "==1.16.0"
 openpyxl = "==2.5.0"
-pandas = "==0.22.0"
+pandas = "==0.23.4"
 parsimonious = "==0.8.0"
 parsley = "==1.3"
 passlib = "==1.7.1"
@@ -75,6 +75,7 @@ netifaces = "*"
 psutil = "*"
 redis = "==2.10.6"
 "sqlalchemy-i18n" = "==1.0.3"
+flask-webpack = "*"
 
 [dev-packages]
 "autopep8" = "*"
