--- a/Pipfile
+++ b/Pipfile
@@ -84,6 +84,7 @@ nose = "==1.3.7"
 flask-testing = "==0.7.1"
 pytest = "==3.5.0"
 coverage = "*"
+mimesis = "*"
 
 [requires]
 python_version = "3.6"
