--- a/Pipfile
+++ b/Pipfile
@@ -56,7 +56,7 @@ raven = "==6.6.0"
 regex = "==2018.2.3"
 requests = "==2.6.0"
 six = "==1.11.0"
-sqlalchemy = "==1.2.6"
+sqlalchemy = "~=1.2"
 sqlalchemy-utils = "==0.33.11"
 tablib = "==0.12.1"
 unidecode = "==0.4.21"
