--- a/apollo/static/package.json
+++ b/apollo/static/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --watch"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "manifest-revision-webpack-plugin": "^0.4.1",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
@@ -30,6 +32,7 @@
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   }
 }
