--- a/apollo/static/package.json
+++ b/apollo/static/package.json
@@ -26,7 +26,9 @@
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "manifest-revision-webpack-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
