--- a/apollo/static/package.json
+++ b/apollo/static/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^4.3.1",
+    "bootstrap-v4-rtl": "^4.3.1-0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6"
   },
