--- a/requirements-docker.txt
+++ b/requirements-docker.txt
@@ -8,7 +8,7 @@ blinker==1.3
 cachetools==1.1.5
 celery==3.1.20
 Fabric==1.8.3
-Flask-Admin==1.4.0
+Flask-Admin==1.5.3
 Flask-Assets==0.9
 Flask-Babel==0.9
 Flask-Cache==0.13.1
@@ -24,11 +24,11 @@ Flask-Security==1.7.1
 Flask-SSLify==0.1.4
 Flask-Testing==0.4.2
 Flask-WTF==0.11
-Flask==0.10.1
+flask>=0.12.3
 gevent==1.0.2
 honcho==0.5.0
 itsdangerous==0.24
-Jinja2==2.7.3
+Jinja2>=2.10.1
 kombu==3.0.33
 lxml==3.3.5
 MarkupSafe==0.23
@@ -45,9 +45,9 @@ python-magic==0.4.12
 pytz==2015.7
 raven==4.2.3
 redis==2.9.1
-requests==2.6.0
+requests>=2.20.0
 six==1.10.0
-tablib==0.9.11
+tablib>=0.11.5
 unicodecsv==0.9.4
 Unidecode==0.04.14
 webassets==0.9
