--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ Flask-Security==1.7.1
 Flask-SSLify==0.1.4
 Flask-Testing==0.4.2
 Flask-WTF==0.11
-flask>=0.12.3
+flask==0.12.4
 gevent==1.0.2
 honcho==0.5.0
 itsdangerous==0.24
