--- a/apollo/static/package.json
+++ b/apollo/static/package.json
@@ -12,10 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "bootstrap": "^4.3.1",
     "bootstrap-v4-rtl": "^4.3.1-0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.6"
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -25,6 +26,7 @@
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "manifest-revision-webpack-plugin": "^0.4.1",
     "mini-css-extract-plugin": "^0.5.0",
