--- a/apollo/static/package.json
+++ b/apollo/static/package.json
@@ -16,7 +16,8 @@
     "bootstrap": "^4.3.1",
     "bootstrap-v4-rtl": "^4.3.1-0",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "select2": "^4.0.7-rc.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
