--- a/apollo/static/package.json
+++ b/apollo/static/package.json
@@ -16,6 +16,7 @@
     "@ttskch/select2-bootstrap4-theme": "^1.2.2",
     "bootstrap": "^4.3.1",
     "bootstrap-v4-rtl": "^4.3.1-0",
+    "highcharts": "^7.1.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "popper.js": "^1.15.0",
