--- a/apollo/static/package.json
+++ b/apollo/static/package.json
@@ -16,9 +16,13 @@
     "@ttskch/select2-bootstrap4-theme": "^1.2.2",
     "bootstrap": "^4.3.1",
     "bootstrap-v4-rtl": "^4.3.1-0",
+    "highcharts": "^7.1.1",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "popper.js": "^1.15.0",
-    "select2": "^4.0.7-rc.0"
+    "select2": "^4.0.7-rc.0",
+    "tempusdominus-bootstrap-4": "^5.1.2",
+    "tempusdominus-core": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
