--- a/requirements/prod.in
+++ b/requirements/prod.in
@@ -22,7 +22,7 @@ flask-principal==0.4.0
 flask-restful==0.3.6
 flask-script==2.0.6
 flask-security==3.0.0
-flask-sqlalchemy==2.3.2
+flask-sqlalchemy~=2.4.0
 flask-sslify==0.1.4
 flask-uploads==0.2.1
 flask-webpack
@@ -61,7 +61,7 @@ regex==2018.2.3
 requests==2.21.0
 shapely
 six==1.11.0
-sqlalchemy-utils==0.33.11
+sqlalchemy-utils~=0.34
 sqlalchemy~=1.2
 tablib==0.13.0
 unidecode==0.4.21
