--- a/apollo/static/package.json
+++ b/apollo/static/package.json
@@ -19,6 +19,7 @@
     "bs-custom-file-input": "^1.3.2",
     "highcharts": "^7.1.1",
     "jquery": "^3.4.1",
+    "leaflet": "^1.5.1",
     "moment": "^2.24.0",
     "popper.js": "^1.15.0",
     "select2": "^4.0.7-rc.0",
