--- a/requirements/prod.in
+++ b/requirements/prod.in
@@ -9,6 +9,7 @@ blinker==1.4
 cachetools==1.1.5
 celery==4.1.1
 flask-admin==1.5.3
+flask-apispec==0.8.1
 flask-assets==0.12
 flask-babelex==0.9.3
 flask-caching==1.3.3
@@ -19,7 +20,6 @@ flask-mail==0.9.1
 flask-menu
 flask-migrate==2.1.1
 flask-principal==0.4.0
-flask-restful==0.3.6
 flask-script==2.0.6
 flask-security==3.0.0
 flask-sqlalchemy~=2.4.0
@@ -38,6 +38,7 @@ loginpass
 lxml==4.1.1
 mako==1.0.7
 markupsafe==1.0
+marshmallow-sqlalchemy==0.17.0
 netifaces
 networkx==2.1
 numpy==1.16.0
